# DeepSeekV3_replica

./: README.md  config.yaml  pyproject.toml  requirements.txt  train.py
configs/: __init__.py  config.yaml  model_config.py
data/: __init__.py  data_module.py
src/: MoE.py  _init__.py  deepseek_rope.py  deepseek_transformer.py  deepseekv3.py  mla.py  mtp.py
test_module/: test.py
training/: __init__.py  lightning_module.py
utils/: __init__.py  deepseek_rope.py  rms_norm.py  swiglu.py
