[project]
name = "deepseekv3-replica"
version = "0.1.0"
description = "Code Implementation of DeepSeekV3 paper."
authors = [
    {name = "Nilesh Auradkar",email = "nilesh.auradkar.0599@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
