[project]
name = "deepseek-implmentation"
version = "0.1.0"
description = "Experimental Implementation of DeepSeekV3 research paper."
authors = [
    {name = "Nilesh Auradkar",email = "nilesh.auradkar.0599@gmail.com"}
]
package-mode = false
readme = "README.md"
dependencies = [
    "wandb (>=0.23.1,<0.24.0)",
    "datasets (>=4.4.2,<5.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "lightning (>=2.6.0,<3.0.0)",
    "mlflow[databricks] (>=3.8.1,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
torch = {version = ">=2.9.0", source = "pytorch"}
torchvision = {version = ">=0.24.0", source = "pytorch"}
torchaudio = {version = ">=2.9.0", source = "pytorch"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"


[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
